[package]
name = "st-rust"
version = "0.1.0"
authors = ["Antoine Busch <antoine.busch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
anyhow = "1.0.38"
bytes = "1.0.1"
byteorder = "1.4.2"
prost = "0.7"
ring = "0.16.20"
data-encoding = "2.3.1"
pem = "0.8.2"
fastrand = "1.4.0"
rustls = {version="0.19.0", features=["logging", "dangerous_configuration"]}
tokio-rustls = "0.22.0"
tracing = "0.1.23"
tracing-subscriber = "0.2.15"
url = "2.2.0"
thiserror = "1.0.23"
tracing-futures = "0.2.5"
serde = { version="1.0.123", features=["derive"] }
toml = "0.5.8"
directories = "3.0.1"
lz4_flex = "0.7.5"

[build-dependencies]
prost-build = "0.7"
