[package]
name = "st-rust"
version = "0.1.0"
authors = ["Antoine Busch <antoine.busch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8", features = ["full"] }
anyhow = "1.0"
bytes = "1.0"
byteorder = "1.4"
prost = "0.8"
ring = "0.16"
data-encoding = "2.3"
pem = "0.8"
fastrand = "1.4"
rustls = {version="0.19", features=["logging", "dangerous_configuration"]}
tokio-rustls = "0.22"
tracing = "0.1"
tracing-subscriber = "0.2"
url = "2.2"
thiserror = "1"
tracing-futures = "0.2"
serde = { version="1.0", features=["derive"] }
toml = "0.5"
directories = "3.0"
lz4_flex = "0.8"

[build-dependencies]
prost-build = "0.8"
